# keyboard_simulator

./: .gitignore  Cargo.toml  README  index.html  index.js  start_docker.sh
side_tools/: analyze_results.py  create_stats.py  make_swerty_x11.py  modules.py  plot_arrangements.py  plot_difficulties.py  plot_result.py
src/: lib.rs  main.rs  parameters.rs  params  params_new.yaml  qwerty_swe  qwerty_swe_layout
src/stats/: eng_bigram_frequency  eng_letter_frequency  eng_word_frequency  swe_bigram_frequency  swe_letter_frequency  swe_word_frequency  tot_bigram_frequency  tot_letter_frequency  tot_word_frequency
src/stats/eng_books/: a_tale_of_two_cities  dubliners  ethan_frome  grimm_brothers  peter_pan  sense_and_sensibility  the_scarlet_letter  war_and_peace
src/stats/swe_books/: bannlyst  dagdrommar  ett_pennskaft_som_piga  foervillelser  gotiska_rummen  prastgarden_en_julhistoria
