[package]
name = "keyboard_optimiser"
version = "0.1.0"
authors = ["Magnus Lindstrom"]
edition = "2018"

[dependencies]
rand = "0.7.0"
rand_pcg = "0.2.0"
array-init = "0.0.4"
libmath = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 3

[lib]
crate-type = ["cdylib"]
